Added support for category filter.